samples/_failures_safe/1761075223_9f6304_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae628111.c: In function ‘main’:
./samples/SAFE/__tmp_ae628111.c:186:13: error: expected expression at end of input
  186 |             running =
      |             ^~~~~~~
./samples/SAFE/__tmp_ae628111.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae628111.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae628111.c:186:13: error: expected declaration or statement at end of input
